--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,22 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "todolist_development",
     "host": "127.0.0.1",
     "dialect": "mysql"
+
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "todolist_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "todolist_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
